# such

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
src/: .env-example  api_entrypoint.py  config.py
src/api/: router.py
src/api/boards/: router.py
src/api/boards/endpoints/: get_boards.py
src/common/: types.py
src/infrastructure/db/models/: board.py  post.py  thread.py
