[tool.poetry]
name = "such"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.42"
alembic = "^1.16.4"
ruff = "^0.12.7"
uvicorn = "^0.35.0"


[tool.ruff]
select = ["E", "F", "I", "B", "UP", "D", "N", "S", "A", "C90", "RUF"]

[tool.ruff.lint]
ignore = ["D100", "D101", "D103"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["ALL"]
"env.py" = ["ALL"]